transport_versioned_docs/version-0.9.0/api/Unity.Networking.Transport.Utilities.ReliableUtility.Statistics.md
---  
id: Unity.Networking.Transport.Utilities.ReliableUtility.Statistics  
title: Unity.Networking.Transport.Utilities.ReliableUtility.Statistics  
---

<div class="markdown level0 summary">

</div>

<div class="markdown level0 conceptual">

</div>

<div class="inheritedMembers">

##### Inherited Members

<div>

ValueType.Equals(Object)

</div>

<div>

ValueType.GetHashCode()

</div>

<div>

ValueType.ToString()

</div>

<div>

Object.Equals(Object, Object)

</div>

<div>

Object.GetType()

</div>

<div>

Object.ReferenceEquals(Object, Object)

</div>

</div>

##### **Namespace**: System.Dynamic.ExpandoObject

##### **Assembly**: MLAPI.dll

##### Syntax

    public struct Statistics

## Fields

### PacketsDropped

<div class="markdown level1 summary">

</div>

<div class="markdown level1 conceptual">

</div>

#### Declaration

    public int PacketsDropped

#### Field Value

| Type         | Description |
|--------------|-------------|
| System.Int32 |             |

### PacketsDuplicated

<div class="markdown level1 summary">

</div>

<div class="markdown level1 conceptual">

</div>

#### Declaration

    public int PacketsDuplicated

#### Field Value

| Type         | Description |
|--------------|-------------|
| System.Int32 |             |

### PacketsOutOfOrder

<div class="markdown level1 summary">

</div>

<div class="markdown level1 conceptual">

</div>

#### Declaration

    public int PacketsOutOfOrder

#### Field Value

| Type         | Description |
|--------------|-------------|
| System.Int32 |             |

### PacketsReceived

<div class="markdown level1 summary">

</div>

<div class="markdown level1 conceptual">

</div>

#### Declaration

    public int PacketsReceived

#### Field Value

| Type         | Description |
|--------------|-------------|
| System.Int32 |             |

### PacketsResent

<div class="markdown level1 summary">

</div>

<div class="markdown level1 conceptual">

</div>

#### Declaration

    public int PacketsResent

#### Field Value

| Type         | Description |
|--------------|-------------|
| System.Int32 |             |

### PacketsSent

<div class="markdown level1 summary">

</div>

<div class="markdown level1 conceptual">

</div>

#### Declaration

    public int PacketsSent

#### Field Value

| Type         | Description |
|--------------|-------------|
| System.Int32 |             |

### PacketsStale

<div class="markdown level1 summary">

</div>

<div class="markdown level1 conceptual">

</div>

#### Declaration

    public int PacketsStale

#### Field Value

| Type         | Description |
|--------------|-------------|
| System.Int32 |             |
